<resources>
    <string name="app_name">LessonPlannerPro</string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="subject">Subject</string>
    <string name="topic">Topic</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="username">Username</string>
</resources>